--- a/字符串类.md
+++ b/字符串类.md
@@ -1,8 +1,7 @@
 # 字符串类
 
-1. 28   字符串排列
+1. 28   字符串排列 感觉较难 
 2. 49： strtoint
 3.  35:  第一次出现一次字符 postion
 4.  55:  字符串中第一个不重复字符
-5.  28： 字符串全排列  感觉较难 
-6. 54： 表示数字的字符串
+5. 54： 表示数字的字符串
